# glplatform

./: Makefile.am  Readme.md  configure.ac
m4/: dummy
src/: glplatform-linux.c  glplatform-win32.c  glplatform.h  glplatform_priv.h  linux.c  win32.c
src/examples/: simple_window.c  text_render.c
src/glbindings/: glcore.c  glcore.h  glplatform-wgl.c  glplatform-wgl.h  glx.c  glx.h  wgl.c  wgl.h
src/math/: math3d.c  math3d.h
src/text/: gltext.c  gltext.h
